@@ -54,7 +54,7 @@ Find differences in auditallow rules.
 Find differences in dontaudit rules.
 .IP "--neverallow"
 Find differences in neverallow rules.
-.IP "--type_trans"
+.IP "-T, --type_trans"
 Find differences in type_transition rules.
 .IP "--type_member"
 Find differences in type_member rules.
