@@ -1,3 +1,10 @@
+2007-08-02  J. Mowery  <jmowery@tresys.com>
+
+	* Split the flags for sesearch to allow searching each type
+	  of terule separately (i.e. type_transition, type_member, 
+	  type_change). These flags are now identical to those used by
+	  sediff.
+
 2007-08-02  J. Tang  <jtang@tresys.com>
 
 	* Official release of SETools 3.3.
